<resources>
    <string name="app_name">Meyman</string>
    <string name="bookings">Бронирования</string>
    <string name="booking">Бронирование</string>
    <string name="login_to_get_started">Чтобы начать, войдите в аккаунт или создайте новый</string>
    <string name="sign_in">Войти</string>
    <string name="personal_information">Личная информация</string>
    <string name="save">Сохранить</string>
    <string name="mail">Почта</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="connect_with_us">Cвязаться с нами</string>
    <string name="email">Электронная почта</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="favorite">Избранные</string>
    <string name="your_favorites">Здесь будут появляться ваши избранные</string>
    <string name="sign_in_account">Войдите в аккаунт</string>
    <string name="call_of_registration">Чтобы приступить к управлению бронированиями и без труда спланировать следущую поездку.</string>
    <string name="sign_in_or_log_in">Войти или зарегестрироваться</string>
    <string name="rent_out_housing">Сдать жилье на Meyman</string>
    <string name="rent_car">Сдать автомобиль на Meyman</string>
    <string name="log_in">Зарегистрироваться</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забыл пароль?</string>
    <string name="or">Или</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="user_name">Имя пользователя</string>
    <string name="person_inform">Личная информация</string>
    <string name="notification">Уведомления</string>
    <string name="Поиск">Поиск</string>
    <string name="Избранные">Избранные</string>
    <string name="Бронирования">Бронирования</string>
    <string name="Профиль">Профиль</string>
    <string name="title_home" />
    <string name="title_dashboard" />
    <string name="title_notifications" />
    <string name="meyman">Meyman</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="choose_direction">Выбрать направление</string>
    <string name="city_hotel_address">Город, отель, адрес</string>
    <string name="near_to_me">Рядом со мной</string>
    <string name="disabled">отключено</string>
    <string name="recent_search">Недавний поиск</string>
    <string name="regions">Регионы</string>
    <string name="sorting">Сортировка</string>
    <string name="filter">Фильтр</string>
    <string name="amount_of_variants">количество вариантов</string>
    <string name="region">Регион</string>
    <string name="period_amount_of_people">Период, количество людей</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="_10_0">10.0</string>
    <string name="rating">Рейтинг</string>
    <string name="amount_of_reviews">· количество отзывов</string>
    <string name="n_kilometers_from_the_center">n км от центра</string>
    <string name="free_cancellation">Бесплатная отмена</string>
    <string name="no_prepayment_required">Предоплата не требуется \n платите на месте</string>
    <string name="from_0_som">от 0 сом.</string>
    <string name="including_taxes_and_fees">Включая налоги и сборы</string>
    <string name="phone_number">Номер телефона</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="email_address">Адрес электронной почты</string>
    <string name="sign_in_through_google">Войти через Google</string>
    <string name="edit">Редактировать</string>
    <string name="free_cancellation_anytime">Бесплатная отмена в любое время</string>
    <string name="_10">10</string>
    <string name="amazing">Замечательно</string>
    <string name="address">Проспект Манаса 16, Бишкек</string>
    <string name="room_name">Представительский номер с кроватью размера “queen-size”</string>
    <string name="square">Площадь:</string>
    <string name="_26_m">26 m²</string>
    <string name="bed_size">Двухместная кровать “queen-size” и диван</string>
    <string name="wifi">WiFi</string>
    <string name="conditioner">Кондиционер</string>
    <string name="dryer">Фен</string>
    <string name="bathroom">Ванная комната</string>
    <string name="city_view">Вид на город</string>
    <string name="tv">Телевизор</string>
    <string name="period">13 июля, чт - 14 июля, пт</string>
    <string name="check_in">Заезд:</string>
    <string name="check_in_date">с 15:00 до 00:00</string>
    <string name="check_out">Выезд:</string>
    <string name="check_out_date">с 00:00 до 12:00</string>
    <string name="breakfast_included">Завтрак включен</string>
    <string name="payment_on_the_spot">оплата на месте</string>
    <string name="_1_1">1 гость, 1 ночь</string>
    <string name="Including_taxes_and_fees">Включая налоги и сборы</string>
    <string name="com">сом.</string>
    <string name="summ">12 520</string>
    <string name="contact_details">Контактные данные</string>
    <string name="book">Забронировать</string>
    <string name="name_and_surname">Имя и фамилия</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="advantages">Зарегистрировавшись, вы получаете доступ к лучшим предложениям и возможность бронирования онлайн.\nМы рады приветствовать вас!</string>
    <string name="continues">Продолжить</string>
    <string name="accept_code">Подтверждение кода</string>
    <string name="we_send_code_on_email">Мы отправили код на вашу электронную почту</string>
    <string name="didnt_receive_code">Не получили код?</string>
    <string name="send_again">Отправить снова</string>
    <string name="confirm">Потвердить</string>
    <string name="write_code">Напишите код потверждения</string>
    <string name="start">Начать</string>
    <string name="internet_connection_is_not_work">Отсутствует интернет подключение</string>
    <string name="old_password">Старый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="update_password">Обновить пароль</string>
    <string name="new_wishlist">Новый вишлист</string>
    <string name="naming">Название</string>
    <string name="_0_150">0/150</string>
    <string name="finish">Завершено</string>
    <string name="your_booking_house">Ваше бронивароние жилья</string>
    <string name="your_booking_1_room">Вы забронировали 1 номер</string>
    <string name="_996">+996</string>
    <string name="change_password">Изменить пароль</string>
    <string name="exit">Выйти</string>
    <string name="child_extra_beds">Дети и дополнительные кровати</string>
    <string name="_0_16">Правила размещения детей (0-16 лет)</string>
    <string name="child_of_any_age_are_allowed">Разрешается проживание детей любого возраста</string>
    <string name="_1_3">По запросу детям в возрасте от 1 до 3 лет детская кроватка предоставляется бесплатно</string>
    <string name="setup_extra_beds">Установка дополнительных кроватей</string>
    <string name="setup_extra_beds_no">Установка дополнительных кроватей не предусмотрена</string>
    <string name="condition_booking">Условия бронирования</string>
    <string name="prepayment">Предоплата</string>
    <string name="prepayment_no">Предоплата не требуется</string>
    <string name="free_cancle">Бесплатная отмена в любое время</string>
    <string name="_00_00">С вас взимается полная стоимость бронирования при отмене после 00:00 в день заезда. В случае незаезда штраф будет равен штрафу за отмену.</string>
    <string name="breakfast">Завтрак включен</string>
    <string name="indicate_rooms_guest_count">Укажите количество номеров и гостей</string>
    <string name="rooms">Номера</string>
    <string name="adult">Взрослые</string>
    <string name="child">Дети</string>
    <string name="_1">1</string>
    <string name="_0">0</string>
    <string name="apply">Применить</string>
    <string name="bedroom">Спальня</string>
    <string name="garderob">Шкаф и гардероб</string>
    <string name="free_toilet">Бесплатные туалетно-косметические принадлежности</string>
    <string name="toilet_peper">Туалетная бумага</string>
    <string name="towel">Полотенце</string>
    <string name="bathroom_2">Ванная</string>
    <string name="shower">Душ</string>
    <string name="guest_zone">Гостиная зона</string>
    <string name="guest_corner">Гостиный уголок</string>
    <string name="sofa">Диван</string>
    <string name="kitchen">Кухня</string>
    <string name="electro_kettle">Электрический чайник</string>
    <string name="coffee_maker">Кофеварка</string>
    <string name="mini_bar">Мини-бар</string>
    <string name="view">Вид</string>
    <string name="view_on_city">Вид на город</string>
    <string name="on_fresh_air">На свежем воздухе</string>
    <string name="sun_terrace">Терраса для загара</string>
    <string name="garden">Сад</string>
    <string name="media_and_technology">Медиа и технологии</string>
    <string name="phone">Телефон</string>
    <string name="services">Сервисы</string>
    <string name="quot_quot">Услуга \"звонок- будильник\"</string>
    <string name="general">Общие</string>
    <string name="safe">Сейф</string>
    <string name="we_send_code_on_your_email">Мы отправим код на вашу электронную почту</string>
    <string name="ala_archa">Ущелье Ала-Арча</string>
    <string name="_13_14">13 июля, чт - 14 июля, пт</string>
    <string name="_1_room">1 номер</string>
    <string name="_2_adult">2 взрослых</string>
    <string name="_0_child">0 детей</string>
    <string name="find">Найти</string>
    <string name="housing">Жилье</string>
    <string name="car">Транспорт</string>
    <string name="advertising">Рекомендации</string>
    <string name="on_map">На карте</string>
    <string name="share">Поделиться</string>
    <string name="choose_room">Выбрать номер от 12 520 сом.</string>
    <string name="hotel_stay_polisy">Порядок проживания в отеле</string>
    <string name="hotel_rules">Данные правила проживания в отеле Novotel Bishkek City Center являются общими и могут варьироваться в зависимости от типа номера.Пожалуйста, также проверьте условия для отдельных номеров.</string>
    <string name="check_in_out_time">Время заезда/выезда</string>
    <string name="c">Заезд c</string>
    <string name="_15_00">15:00</string>
    <string name="out">до</string>
    <string name="out_time">00:00</string>
    <string name="in_c">Выезд c</string>
    <string name="_12_00">12:00</string>
    <string name="home_animal">Домашние животные</string>
    <string name="home_animal_rules">Размещение домашних животных допускается</string>
    <string name="booking_room">Забронировать номер от 12 520 сом.</string>
    <string name="option">2 варианта</string>
    <string name="reset_password_rules">Введите 6-20 символов. Пароль должен содержать\nбуквы и цифры</string>
    <string name="no_get_code">Не получили код?</string>
    <string name="text_favorite">Здесь будут появляться ваши избранные</string>
    <string name="sign">Войти</string>
    <string name="no_like">У вас еще нет избранных отелей</string>
    <string name="exit_account">Выйти с аккаунта?</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
</resources>