<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="32dp"
    android:paddingBottom="24dp"
    tools:context=".presentation.ui.screens.room_page.tablayout.conditions.ConditionsFragment">

    <TextView
        android:id="@+id/conditions_booking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/condition_booking"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_prepayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25.33dp"
        android:src="@drawable/prepayment"
        app:layout_constraintStart_toStartOf="@id/conditions_booking"
        app:layout_constraintTop_toBottomOf="@id/conditions_booking" />

    <TextView
        android:id="@+id/prepayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/prepayment"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_prepayment"
        app:layout_constraintStart_toEndOf="@id/iv_prepayment"
        app:layout_constraintTop_toTopOf="@id/iv_prepayment" />

    <TextView
        android:id="@+id/tv_prepayment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/prepayment_no"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@id/prepayment"
        app:layout_constraintTop_toBottomOf="@id/prepayment" />

    <ImageView
        android:id="@+id/iv_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:src="@drawable/cancel"
        app:layout_constraintStart_toStartOf="@id/iv_prepayment"
        app:layout_constraintTop_toBottomOf="@id/tv_prepayment" />

    <TextView
        android:id="@+id/tv_free_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/free_cancle"
        android:textSize="14sp"
        android:textColor="@color/green"
        app:layout_constraintStart_toEndOf="@id/iv_cancel"
        app:layout_constraintTop_toTopOf="@id/iv_cancel"
        app:layout_constraintBottom_toBottomOf="@id/iv_cancel"
        android:layout_marginStart="4dp" />

    <TextView
        android:id="@+id/tv_free_cancellation"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:text="@string/_00_00"
        android:textColor="@color/black"
        android:lines="3"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/tv_free_cancel"
        app:layout_constraintStart_toStartOf="@id/tv_free_cancel"
        android:layout_marginTop="12dp"/>

    <ImageView
        android:id="@+id/iv_breakfast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/breakfast"
        app:layout_constraintStart_toStartOf="@id/iv_prepayment"
        app:layout_constraintTop_toBottomOf="@id/tv_free_cancellation"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/tv_breakfast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/breakfast"
        android:textSize="14sp"
        android:textColor="@color/green"
        app:layout_constraintStart_toEndOf="@id/iv_breakfast"
        app:layout_constraintTop_toTopOf="@id/iv_breakfast"
        app:layout_constraintBottom_toBottomOf="@id/iv_breakfast"
        android:layout_marginStart="4dp" />
</androidx.constraintlayout.widget.ConstraintLayout>