<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.screens.search.SearchFragment"
    android:paddingHorizontal="16dp"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/arrow_back"
            android:layout_gravity="center_vertical"
            android:paddingVertical="16dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_choose_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_direction"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:layout_marginStart="32dp"
            android:layout_gravity="center_vertical"/>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_for_search_box"
        android:paddingHorizontal="8dp"
        android:paddingVertical="12dp">

        <ImageView
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_search"
            android:layout_alignParentStart="true"
            tools:ignore="ContentDescription" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="4dp"
            android:layout_toStartOf="@id/btn_close"
            android:layout_toEndOf="@id/btn_search"
            android:background="@null"
            android:hint="@string/city_hotel_address"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/black"
            tools:targetApi="O" />

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_close"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp">

        <ImageView
            android:id="@+id/iv_near_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_near_me"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_near_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/near_to_me"
            android:textColor="@color/black"
            android:layout_toEndOf="@id/iv_near_me"/>

        <TextView
            android:id="@+id/tv_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/disabled"
            android:layout_toEndOf="@id/iv_near_me"
            android:layout_below="@id/tv_near_me"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_recent_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recent_search"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_recent_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_recent_search"/>

    <TextView
        android:id="@+id/tv_regions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/regions"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_regions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_region"/>

</LinearLayout>